# NS-MAWM

./: .gitignore  LICENSE  README.md  install.sh  install_ns_mawm.bash  install_smac_pettingzoo.sh  pyproject.toml  requirements-benchmarl-gridcraft.txt  requirements-worldmodels.txt  test.py  worldmodels_compat.py
BenchMARL/: README.md
Predator-prey/: .gitignore
carracing/: dream_env.py  dream_model.py  env.py  extract.py  model.py  render_env.py  render_model.py  rnn_train.py  series.py  train.py  vae_train.py
doomrnn/: _vizdoom.ini  doomreal.py  doomrnn.py  env.py  extract.py  model.py  rnn_train.py  series.py  train.py  vae_train.py
env_adapters/: __init__.py  factory.py  flat.py  gridcraft_adapter.py  overcooked_adapter.py  predator_prey_adapter.py  rules.py  smac_adapter.py
examples/: overcooked_demo.py  toy_demo.py
experiments/: __init__.py  audit_rule_coverage.py  baseline_configs.py  config.py  eval_noisy_rules.py  eval_ood.py  eval_planning.py  eval_rollout.py  eval_rule_dropout.py  evaluation.py  factory.py  launch.py  logging.py  materialize_configs.py  matrix_status.py  paired_claim_path.py  paired_claim_report.py  paper_readiness.py  predator_prey_claim_path.py  predator_prey_claim_report.py  registry.py  reproduce_figures.py  reproduce_table4.py  reproduction_check.py  smoke_test_envs.py  train_world_model.py  training.py
gridcraft/: README.md  README_BENCHMARL_GPU.md  analyze_b00_b10_lstm_comparison.py  analyze_b11_mambpo_lambda_ablation.py  benchmark_hpo_throughput.py  clean_experiment.bash  compare_ns_variants.py  config.py  create_sweep.bash  diagnose_gridcraft_task_hierarchy.py  diagnose_ns_mawm.py  dream_env.py  dream_model.py  env.py  es.py  evaluate_b11_mambpo_lambda_ablation.bash  evaluate_trained_policies_hierarchy.bash  evaluate_trained_policies_hierarchy.py  evaluate_world_model.py  exp_config.py  experiment_config.py  experiment_logging.py  extract.bash  (+73 more)
vGridcraft/: benchmark_vectorization.py  pyproject.toml  test_render.py  test_reward_hierarchy.py  test_vectorized_env.py
vGridcraft/vgridcraft/: __init__.py  config.py  dataset.py  dream_torchrl_env.py  env.py  torchrl_env.py
(+117 files in other folders)
