[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsmawm"
version = "0.1.0"
description = "Neuro-Symbolic Multi-Agent World Model library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NS-MAWM"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "torch>=2.1.0",
  "pytorch-lightning>=2.1.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "einops>=0.7.0",
  "rich>=13.0.0",
  "tensorboard>=2.14.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15.0"]

[project.scripts]
nsmawm = "nsmawm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"

testpaths = ["tests"]
