[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ns-mawm-reproduction"
version = "0.1.0"
description = "Separated MARL, world-model, and agnostic NS-MAWM research scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NS-MAWM"}]
dependencies = [
  "torch>=2.0",
  "numpy>=1.24,<2",
  "pandas>=2.0",
  "gymnasium>=0.29",
  "pettingzoo>=1.24",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "matplotlib>=3.7",
  "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=24.0", "mypy>=1.8"]

[tool.setuptools.packages.find]
include = ["ns_mawm*", "wm_lib*", "marl_lib*", "env_adapters*", "experiments*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
