[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vGridcraft"
version = "0.1.0"
description = "Vectorized Gridcraft environment for NS-MAWM experiments"
requires-python = ">=3.10"
dependencies = ["torch", "numpy"]

[tool.setuptools.packages.find]
include = ["vgridcraft*"]
